--- a/package.json
+++ b/package.json
@@ -24,25 +24,28 @@
   },
   "homepage": "https://github.com/jtrussell/angular-selection-model",
   "devDependencies": {
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "matchdep": "~0.3.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-uglify": "~0.2.7",
-    "grunt-contrib-jshint": "~0.8.0",
-    "grunt-contrib-connect": "~0.5.0",
-    "karma-chrome-launcher": "~0.1.2",
-    "karma-firefox-launcher": "~0.1.3",
-    "karma-script-launcher": "~0.1.0",
-    "karma-html2js-preprocessor": "~0.1.0",
-    "karma-jasmine": "~0.1.5",
-    "karma-coffee-preprocessor": "~0.1.2",
-    "requirejs": "~2.1.9",
-    "karma-requirejs": "~0.2.1",
-    "karma-phantomjs-launcher": "~0.1.1",
-    "karma": "~0.10.8",
-    "grunt-karma": "~0.6.2",
-    "grunt-bump": "0.0.13"
+    "grunt": "^1.0.1",
+    "grunt-bump": "0.8.0",
+    "grunt-contrib-clean": "~1.0.0",
+    "grunt-contrib-concat": "~1.0.1",
+    "grunt-contrib-connect": "~1.0.2",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-jshint": "~1.0.0",
+    "grunt-contrib-uglify": "~1.0.1",
+    "grunt-contrib-watch": "~1.0.0",
+    "grunt-karma": "~2.0.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "~0.13.22",
+    "karma-chrome-launcher": "~1.0.1",
+    "karma-coffee-preprocessor": "~1.0.0",
+    "karma-firefox-launcher": "~1.0.0",
+    "karma-html2js-preprocessor": "~1.0.0",
+    "karma-jasmine": "~1.0.2",
+    "karma-phantomjs-launcher": "~1.0.0",
+    "karma-requirejs": "~1.0.0",
+    "karma-script-launcher": "~1.0.0",
+    "matchdep": "~1.0.1",
+    "phantomjs-prebuilt": "^2.1.7",
+    "requirejs": "~2.2.0"
   }
 }
